--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -59,8 +59,8 @@
             <div class="main2">
             <div id="main2">
                 <div id="contents">
-                    <p class="organization">论坛组委会(排名不分先后顺序)<br/></p>
-                    张景中  刘建伟  马建峰  荆继武  唐绍华  张玉清  冯荣权  孔凡玉  陈光喜<br/><br/>
+                    <p class="organization">论坛组委会（排名不分先后顺序）<br/></p>
+                    张景中    刘建伟    马建峰    荆继武    唐绍华    张玉清    冯荣权    孔凡玉    陈光喜<br/><br/>
                     <p class="organization">论坛组织和筹备委员会<br/></p>
                     蒋林智（University of Surrey）  丁勇（桂林电子科技大学）<br/><br/>
                     <a href="https://j.map.baidu.com/b0ZKP">
