--- a/SHDIplan.html
+++ b/SHDIplan.html
@@ -79,26 +79,22 @@
  <tr><td>&nbsp;</td><td>10:40 - 10:50</td><td>茶歇</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>10:50 - 11:30</td><td>基于PUF的可信平台模块TPM 根密钥实现方法</td><td>赵波</td></tr>
  <tr><td>&nbsp;</td><td>11:30 - 12:10</td><td>ZUC算法FPGA优化实现</td><td>杨亚涛</td></tr>
- <tr><td>&nbsp;</td><td>&nbsp;</td><td>午餐（百悦酒店餐厅）</td><td></td></tr>
+ <tr><td>&nbsp;</td><td>12:10</td><td>午餐（用餐地点: 百悦酒店餐厅）</td><td></td></tr>
  <tr><td>&nbsp;</td><td>14:00 - 14:40</td><td>High Performance and Hardware Efficient Computer Arithmetic for Post Quantum Cryptography</td><td>刘伟强</td></tr>
  <tr><td>&nbsp;</td><td>14:40 - 15:20</td><td>基于FPGA的密码算法设计方法</td><td>邬刚</td></tr>
  <tr><td>&nbsp;</td><td>15:20 - 15:40</td><td>茶歇</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>15:40 - 16:20</td><td>基于FPGA的真随机数发生器的设计</td><td>杨博翰</td></tr>
  <tr><td>&nbsp;</td><td>16:20 - 17:00</td><td>非线性反馈密码系统的代数次数与安全性分析</td><td>刘美成</td></tr>
- <tr><td>&nbsp;</td><td>&nbsp;</td><td>晚餐（百悦酒店餐厅）</td><td>&nbsp;</td></tr>
+ <tr><td>&nbsp;</td><td>17:00</td><td>晚餐（用餐地点: 百悦酒店餐厅）</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
- <tr><td>9月29日</td><td>&nbsp;9:00 - 9:50</td><td>TPM and its host platform - a special case of two-party computation</td><td>Liqun Chen</td></tr>
- <tr><td>&nbsp;</td><td>&nbsp;9:50 - 10:40</td><td>Leakage Deterring Authenticated Secret Sharing and Application to Secure Cloud Computing
-</td><td>Qiuliang Xu</td></tr>
- <tr><td>&nbsp;</td><td>10:40 - 11:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td>14:50 - 15:40</td><td>分布式共识机制</td><td>Lei Wang</td></tr>
- <tr><td>&nbsp;</td><td>12:00 - 14:00</td><td>Lunch</td><td></td></tr>
- <tr><td>&nbsp;</td><td>14:00 - 14:50</td><td>Card-based Majority Voting Protocols with Three Inputs Using Three Cards</td><td>Kazuo Ohta</td></tr>
- <tr><td>&nbsp;</td><td>11:10 - 12:00</td><td>Cloud-assisted Secure Computing for IoT</td><td>Bo Luo</td></tr>
-	
- <tr><td>&nbsp;</td><td>15:40 - 16:10</td><td>Tea Break</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td>16:10 - 17:00</td><td>Efficient Secure String-Comparison from Custom Garbing</td><td>Yan Huang</td></tr>
- <tr><td>&nbsp;</td><td>18:00 - 20:00</td><td>Dinner</td><td></td></tr>
+ <tr><td>9月29日</td><td>&nbsp;8:00 - 8:40</td><td>Spectral Arithmetic: Modular Arithmetic and Architecture in Public-key Cryptography</td><td>张泽松</td></tr>
+ <tr><td>&nbsp;</td><td>&nbsp;8:40 - 9:20</td><td>SEip：片上安全根的设计和应用</td><td>樊俊峰</td></tr>
+ <tr><td>&nbsp;</td><td>&nbsp;9:20 - 10:00</td><td>硬件安全与硬件辅助系统安全</td><td>张吉良</td></tr>
+ <tr><td>&nbsp;</td><td>10:00 - 10:20</td><td>茶歇</td><td>&nbsp;</td></tr>
+ <tr><td>&nbsp;</td><td>10:20 - 11:00</td><td>面向掩码型密码实现的效率优化研究</td><td>邱爽</td></tr>
+ <tr><td>&nbsp;</td><td>11:00 - 11:40</td><td>面向白盒安全的分组密码算法SWAN设计</td><td>龚征</td></tr>
+ <tr><td>&nbsp;</td><td>11:40</td><td>午餐（用餐地点: 百悦酒店餐厅）</td><td></td></tr>
+ <tr><td>&nbsp;</td><td>14:00 - 17:30</td><td>自由论坛时间</td><td>蒋林智</td></tr>
 </tbody></table>
 	    </br></br>
    <div id="up2">
