--- a/SHDIplan.html
+++ b/SHDIplan.html
@@ -70,7 +70,7 @@
 </style>
 <table class="tableizer-table">
 <thead><tr class="tableizer-firstrow"><th>&nbsp;&nbsp;&nbsp;日期</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;时间</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;报告</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;报告人&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th></tr></thead><tbody>
- <tr><td>9月27日</td><td>&nbsp;14:30 - 20:00</td><td>论坛注册及报到（桂林百悦大酒店大堂）</td><td>&nbsp;</td></tr>
+ <tr><td>9月27日</td><td>&nbsp;14:00 - 20:00</td><td>论坛注册及报到&nbsp;&nbsp;桂林百悦大酒店大堂</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
  <tr><td>9月28日</td><td>&nbsp;8:00 - 8:30</td><td>开幕 合影</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>&nbsp;8:30 - 9:20</td><td>特邀报告（待定）</td><td>张景中</td></tr>
@@ -84,7 +84,7 @@
  <tr><td>&nbsp;</td><td>14:40 - 15:20</td><td>基于FPGA的密码算法设计方法</td><td>邬刚</td></tr>
  <tr><td>&nbsp;</td><td>15:20 - 15:40</td><td>茶歇</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>15:40 - 16:20</td><td>基于FPGA的真随机数发生器的设计</td><td>杨博翰</td></tr>
- <tr><td>&nbsp;</td><td>16:20 - 17:00</td><td>非线性反馈密码系统的代数次数与安全性分析</td><td>刘美成</td></tr>
+ <tr><td>&nbsp;</td><td>16:20 - 17:00</td><td>《下一代可信技术：MesaTEE通用安全计算框架》</td><td>周吉文</td></tr>
  <tr><td>&nbsp;</td><td>17:00</td><td>晚餐（用餐地点: 百悦酒店餐厅）</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
  <tr><td>9月29日</td><td>&nbsp;8:00 - 8:40</td><td>Spectral Arithmetic: Modular Arithmetic and Architecture in Public-key Cryptography</td><td>张泽松</td></tr>
