--- a/SHDIregister.html
+++ b/SHDIregister.html
@@ -62,8 +62,8 @@
                         <td>(转账时请注明单位与姓名)</td>
                     </tr>
                     <tr>
-                        <td>户名：广西臻悦文化传媒有限公司</td>
-                        <td></td>
+                        <td>户&nbsp; &nbsp;&nbsp;&nbsp;名：</td>
+                        <td>广西臻悦文化传媒有限公司</td>
                     </tr>
                     <tr>
                         <td>税 &nbsp; &nbsp;&nbsp;&nbsp;号：</td>
@@ -87,7 +87,7 @@
                 <table class="table">
                 <caption>住宿信息</caption>
                 <tbody >
-                    <tr><td style="width: 50%;text-indent: 2em">论坛住宿酒店：桂林百悦大酒店（桂林市金鸡岭路 1 号）。
+                    <tr><td style="width: 50%;text-indent: 2em">论坛住宿酒店：桂林百悦大酒店（桂林市金鸡岭路 1 号）
                     </td>
                     </tr>
                 </tbody>
@@ -99,7 +99,7 @@
                     </caption>
                     <tbody >
                         <tr>
-                            <td style="width: 40%">论坛合作联系人：</td>
+                            <td style="width: 40%">&nbsp;&nbsp；论坛合作联系人：</td>
                             <td>蒋林智</td>
                         </tr>
 <!--                         <tr>
