--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -36,7 +36,13 @@
                             <ul class="nav navbar-nav navbar-right">
                                     <li><a href="index.html">
                                             <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
-                                    <li><a href="SHDIpage.html">SHDI论坛介绍</a></li>
+                                    <li>
+                                        <a href="SHDIpage.html">SHDI论坛介绍</a>
+                                        <ul class="sub">
+                                            <li><a href="SHDIplan.html">SHDI论坛日程</a></li>
+                                            <li><a href="SHDIregister.html">SHDI论坛注册</a></li>
+                                        </ul>
+                                    </li>
                                     <li><a href="SHDIplan.html">SHDI论坛日程</a></li>
                                     <li><a href="SHDIregister.html">SHDI论坛注册</a></li>
                                     <li><a href="#">ENGLISH</a></li>
