--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -33,8 +33,8 @@
                             <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a>
                         </div>
                         <div id="navbar-collapse" class="collapse navbar-collapse">
-<!--                             <ul class="nav navbar-nav navbar-right"> -->
-                            <ul class="nav-this">
+                            <ul class="nav navbar-nav navbar-right">
+<!--                             <ul class="nav-this"> -->
                                     <li><a href="index.html">
                                             <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
                                     <li>
