--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -33,12 +33,12 @@
                             <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a>
                         </div>
                         <div id="navbar-collapse" class="collapse navbar-collapse">
-                            <ul class="nav navbar-nav navbar-right dropdown-menu">
+                            <ul class="nav navbar-nav navbar-right">
                                     <li><a href="index.html">
                                             <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
                                     <li>
                                         <a href="SHDIpage.html">SHDI论坛介绍</a>
-                                        <ul>
+                                        <ul class="dropdown-menu">
                                             <li><a href="SHDIplan.html">SHDI论坛日程</a></li>
                                             <li><a href="SHDIregister.html">SHDI论坛注册</a></li>
                                         </ul>
