--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -37,11 +37,13 @@
                                     <li><a href="index.html">
                                             <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
                                     <li>
-                                        <a href="SHDIpage.html">SHDI论坛介绍</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="SHDIplan.html">SHDI论坛日程</a></li>
-                                            <li><a href="SHDIregister.html">SHDI论坛注册</a></li>
-                                        </ul>
+                                        <div class="dropdown-menu">
+                                           <a href="SHDIpage.html">SHDI论坛介绍</a>
+                                             <ul>
+                                                 <li><a href="SHDIplan.html">SHDI论坛日程</a></li>
+                                                 <li><a href="SHDIregister.html">SHDI论坛注册</a></li>
+                                             </ul>
+                                        </div>
                                     </li>
                                     <li><a href="SHDIplan.html">SHDI论坛日程</a></li>
                                     <li><a href="SHDIregister.html">SHDI论坛注册</a></li>
