--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -37,7 +37,7 @@
                                     <li><a href="index.html">
                                             <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
                                     <li class="submenu">
-                                           <a href="SHDIpage.html">SHDI论坛入口</a>
+                                           <a href="SHDIpage.html">SHDI国际研讨会</a>
                                              <ul class="sub">
                                                  <li><a href="SHDIpage.html">论坛介绍</a></li>
                                                  <li><a href="SHDIplan.html">论坛日程</a></li>
@@ -45,11 +45,27 @@
                                              </ul>
                                     </li>
                                     <li class="submenu">
-                                           <a href="index.html">安全多方计算论坛</a>
+                                           <a href="introduction.html">SMPC安全多方计算国际论坛</a>
                                              <ul class="sub">
-                                                 <li><a href="SHDIpage.html">论坛介绍</a></li>
-                                                 <li><a href="SHDIplan.html">论坛日程</a></li>
-                                                 <li><a href="SHDIregister.html">论坛注册</a></li>
+                                                 <li><a href="introduction.html">论坛介绍</a></li>
+                                                 <li><a href="schedule.html">论坛日程</a></li>
+                                                 <li><a href="about.html">论坛注册</a></li>
+                                             </ul>
+                                    </li>
+                                    <li class="submenu">
+                                           <a href="introduction.html">QPQC量子与后量子密码论坛</a>
+                                             <ul class="sub">
+                                                 <li><a href="introduction.html">论坛介绍</a></li>
+                                                 <li><a href="schedule.html">论坛日程</a></li>
+                                                 <li><a href="about.html">论坛注册</a></li>
+                                             </ul>
+                                    </li>
+                                    <li class="submenu">
+                                           <a href="introduction.html">CSAC</a>
+                                             <ul class="sub">
+                                                 <li><a href="introduction.html">论坛介绍</a></li>
+                                                 <li><a href="schedule.html">论坛日程</a></li>
+                                                 <li><a href="about.html">论坛注册</a></li>
                                              </ul>
                                     </li>
                                     <li><a href="#">ENGLISH</a></li>
