--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -23,7 +23,7 @@
         <header style="min-height: 76px;">
                 <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
                     <div class="container">
-                        <div class="navbar-header">
+<!--                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
                                 <span class="sr-only">切换导航</span>
                                 <span class="icon-bar"></span>
@@ -31,10 +31,9 @@
                                 <span class="icon-bar"></span>
                             </button>
                             <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a>
-                        </div>
+                        </div> -->
                         <div id="navbar-collapse" class="collapse navbar-collapse">
-<!--                             <ul class="nav navbar-nav"> -->
-                            <ul>
+                            <ul class="nav navbar-nav navbar-right">
                                     <li><a href="index.html">
                                             <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
                                     <li class="submenu">
