--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -23,7 +23,7 @@
         <header style="min-height: 76px;">
                 <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
                     <div class="container">
-<!--                         <div class="navbar-header">
+                        <div class="navbar-header">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
                                 <span class="sr-only">切换导航</span>
                                 <span class="icon-bar"></span>
@@ -31,7 +31,7 @@
                                 <span class="icon-bar"></span>
                             </button>
                             <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a>
-                        </div> -->
+                        </div>
                         <div id="navbar-collapse" class="collapse navbar-collapse">
                             <ul class="nav navbar-nav navbar-right">
                                     <li><a href="index.html">
@@ -53,8 +53,7 @@
                                                  <li><a href="about.html">论坛注册</a></li>
                                              </ul>
                                     </li>
-                                
-                                    <li class="submenu">
+<!--                                     <li class="submenu">
                                            <a href="introduction.html">QPQC论坛</a>
                                              <ul class="sub">
                                                  <li><a href="introduction.html">论坛介绍</a></li>
@@ -79,7 +78,7 @@
                                                  <li><a href="schedule.html">论坛日程</a></li>
                                                  <li><a href="about.html">论坛注册</a></li>
                                              </ul>
-                                    </li>
+                                    </li> -->
                                     <li><a href="#">ENGLISH</a></li>
                             </ul>
                         </div>
