--- a/CC Introduction.html
+++ b/CC Introduction.html
@@ -72,8 +72,9 @@
                     &nbsp; &nbsp; &nbsp; &nbsp; CC symposium would like to invit well-known researchers all over the world to present their best works about state-of-art, research trends and applications on Code and Cryptography. Everyone, who does the best works on above fields, will be invited to attend CC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="CC-2018.html">CC Symposiu-2018</a> <br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="CC-2019.html">CC Symposiu-2019</a> <br/>
+                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="CC-2018.html">CC Symposium-2018</a> <br/>
+                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="CC-2019.html">CC Symposium-2019</a> <br/>
+                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="CC-2020.html">CC Symposium-2020</a> <br/>
                 </p>
             </div> 
             </div>
