--- a/AI syllabus.html
+++ b/AI syllabus.html
@@ -116,7 +116,7 @@ date.setTime(date.getTime() - skew)
             <div class="introdution">
                 <div id="theme">
                     <p style="text-align:center"><img alt="AI training course" src="image/AI-poster.jpeg"  style="width: 210px; height: 520px; " ></a>  <img alt="AI training course"  src="image/AI-授课方式.jpeg" style="width: 210px; height: 520px; " ></a> <img alt="AI training course"  src="image/AI-课程安排.jpeg"  style="width: 210px; height: 520px; " ></a> <br/>
-                    <p style="text-align: center;font-size: 20px">PQC Online Training Course</p>
+                    <p style="text-align: center;font-size: 20px">AI and Security Online Training Course</p>
                     <hr>
                     <p style="text-indent:2em ">Online Course is 30 hours training course, wich will admit 40 excellent trainees including young researcher, Ph.D. and master students.
                       
