--- a/AI syllabus.html
+++ b/AI syllabus.html
@@ -131,13 +131,14 @@ date.setTime(date.getTime() - skew)
                     
                     <p style="text-align: center;font-size: 20px">Lectures</p>
                      <hr>
-                    <p style="text-indent:2em ">*<br/>
-                    <p style="text-indent:2em ">*<br/>
-                    <p style="text-indent:2em ">*<br/>
-                    <p style="text-indent:2em ">*<br/>
-                    <p style="text-indent:2em ">*<br/>
-                    <p style="text-indent:2em ">*<br/>
-                    <p style="text-indent:2em ">*<br/>
+                    <p style="text-indent:2em ">*Basci Mathematic Knowledge<br/>
+                    <p style="text-indent:2em ">*Encrypted Data Processing Introduction<br/>
+                    <p style="text-indent:2em ">*AI Models Introduction<br/>
+                    <p style="text-indent:2em ">*AI Based on Encrypted Data<br/>
+                    <p style="text-indent:2em ">*Implementation of AI Based on Encrypted Data<br/>
+                    <p style="text-indent:2em ">*Federated Learning-1<br/>
+                    <p style="text-indent:2em ">*Federated Learning-2<br/>
+                    <p style="text-indent:2em ">*GAN Models Analysis<br/>
                     <p style="text-indent:2em ">*Trainee Driector<br/>
                               <hr>
                      
