--- a/courses.html
+++ b/courses.html
@@ -88,7 +88,8 @@
                     <p style="text-indent:2em ">*Differential Privacy<br/> 
                     <p style="text-indent:2em ">*Secure Computing (Privacy-Prserving Computing)<br/>
                     <p style="text-indent:2em ">*Bitcion and Blockchain<br/>
-                    <p style="text-indent:2em ">*Trusted Computing<br/>
+                    <p style="text-indent:2em ">*Advanced Topics in Cryptography<br/>
+                    <!-- <p style="text-indent:2em ">*Trusted Computing<br/>  -->
                 <hr>
                 <p style="text-indent:2em ">Online Training Courses: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/>
                    
