--- a/ATC syllabus.html
+++ b/ATC syllabus.html
@@ -116,21 +116,21 @@ date.setTime(date.getTime() - skew)
             <div class="introdution">
                 <div id="theme">
                     <p style="text-align:center"><img alt="Training course on Advanced Topics in Cryptography" src="image/"  style="width: 210px; height: 520px; " ></a>  <img alt="Training course on Advanced Topics in Cryptography" src="image/"  style="width: 210px; height: 520px; " ></a> <img alt="Training course on Advanced Topics in Cryptography" src="image/"  style="width: 210px; height: 520px; " ></a> <br/>
-                    <p style="text-align: center;font-size: 20px">SMPC Online Training Course</p>
+                    <p style="text-align: center;font-size: 20px">ATC Online Training Course</p>
                          <hr>
                     <p style="text-indent:2em ">Advanced Topics in Cryptography (ATC) is one of the effective means to understand advanced cryptography and advanced research. It is suitable for senior reasearcher/Ph.D./Matser. Online Course is 30 hours training course, wich will admit 40 excellent trainees including young researcher, Ph.D. and master students.
                         <br/> 
                         
                      <p style="text-align: center;font-size: 20px">Syllabus</p>
                            <hr>
-                    <p style="text-indent:2em ">*Garbled Circuit<br/>
-                    <p style="text-indent:2em ">*Classic Schemes Analysis of SMPC<br/>
-                    <p style="text-indent:2em ">*SMPC Implementation<br/>
-                    <p style="text-indent:2em ">*SMPC Application<br/>
-                    
+                    <p style="text-indent:2em ">*Foundmental of Cryptography<br/>
+                    <p style="text-indent:2em ">*Secure Multi-parties Computation<br/>
+                    <p style="text-indent:2em ">*Fully Homomorphic Encryption<br/>
+                    <p style="text-indent:2em ">*Functional Encryption<br/>
+                    <p style="text-indent:2em ">*Obfuscation<br/>
                     <p style="text-align: center;font-size: 20px">Lectures</p>
                      <hr>
-                    <p style="text-indent:2em ">*Foundmental of Cryptography <br/>
+                    <p style="text-indent:2em ">* <br/>
                     <p style="text-indent:2em ">*Secret-sharing<br/>
                     <p style="text-indent:2em ">*Secure Multi-parties Computation<br/>
                     <p style="text-indent:2em ">*Homomorphic Encryption<br/>
