--- a/ATC syllabus.html
+++ b/ATC syllabus.html
@@ -115,7 +115,7 @@ date.setTime(date.getTime() - skew)
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
-                    <p style="text-align:center"><img alt="Training course on Advanced Topics in Cryptography" src="image/"  style="width: 210px; height: 520px; " ></a>  <img alt="Training course on Advanced Topics in Cryptography" src="image/"  style="width: 210px; height: 520px; " ></a> <img alt="Training course on Advanced Topics in Cryptography" src="image/"  style="width: 210px; height: 520px; " ></a> <br/>
+                    <p style="text-align:center"><img alt="Training course on Advanced Topics in Cryptography" src="image/ATC-poster.jpeg"  style="width: 210px; height: 520px; " ></a>  <br/>
                     <p style="text-align: center;font-size: 20px">ATC Online Training Course</p>
                          <hr>
                     <p style="text-indent:2em ">Advanced Topics in Cryptography (ATC) is one of the effective means to understand advanced cryptography and advanced research. It is suitable for senior reasearcher/Ph.D./Matser. Online Course is 30 hours training course, wich will admit 40 excellent trainees including young researcher, Ph.D. and master students.
