--- a/courses.html
+++ b/courses.html
@@ -85,7 +85,7 @@
                     <p style="text-indent:2em ">*AI and Security <a href="AI syllabus.html">AI and Security Syllabus(课程安排)</a> <a href="image/Training Course Registration Form-培训课程注册登记表.rar" download="Training Course Registration Form-培训课程注册登记表.rar">Registration Form(注册登记表)</a><br/>
                     <hr>
                     <p style="text-align: center;font-size: 20px">Second Course Session</p> 
-                    <p style="text-indent:2em ">*Differential Privacy <a href="DP syllabus.html">Syllabus of Differential Privacy (课程安排)</a><br/> 
+                    <p style="text-indent:2em ">*Differential Privacy <a href="DP syllabus.html">Syllabus of Differential Privacy and Applications(课程安排)</a><br/> 
                     <p style="text-indent:2em ">*Secure Computation (Privacy-Prserving Computing) <a href="SC syllabus.html">Syllabus of Secure Computation (课程安排)</a><br/>
                     <p style="text-indent:2em ">*Blockchains and Applications <a href="BL syllabus.html">Syllabus of Blockchains and Cryptocurrencies (课程安排)</a><br/>
                     <p style="text-indent:2em ">*Advanced Topics in Cryptography <a href="ATC syllabus.html">Syllabus of Advanced Topics in Cryptography (课程安排)</a> <br/>
